# extraction_ia

./: .env.example  FRI_MODELS_README.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  config-ci.env  pyproject.toml
docs/: FRI_MODELS_DOCUMENTATION.md
examples/: fri_usage_examples.py
scripts/: control_table_and_bucket_creation.py  fri_extraction_prompt_images.py  rules_tables_creation.py  usage.md
src/: config.py  core.py  main.py
src/helpers/: fri_helpers.py
src/models/: backup-models.py  common.py  fri.py
src/prompts/fri/: extraction.py  validation.py
