[project]
name = "extraction-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "google>=3.0.0",
    "google-auth>=2.45.0",
    "google-cloud-bigquery>=3.39.0",
    "google-cloud-logging>=3.13.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-storage>=3.7.0",
    "google-genai>=1.56.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings[gcp-secret-manager]>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88